# TobyScript

./: .gitignore  README.md  setup.cfg
tobyscript/: __main__.py  main.py
tobyscript/data/: ma.txt  true_lab.txt
tobyscript/lib/: script.py
tobyscript/views/: TEMPLATE.py  screen.py
